add tests and documentation for PhaseType distribution

--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,11 @@ name = "PhaseTypeDistributions"
 uuid = "08b9a7ee-cab5-43f1-84cc-91ff3c97629e"
 authors = ["GBarnsley <63357847+GBarnsley@users.noreply.github.com>"]
 version = "0.1.0"
+
+[deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+[compat]
+Distributions = "0.25.120"
+LinearAlgebra = "1.11.0"
