--- a/Project.toml
+++ b/Project.toml
@@ -5,15 +5,14 @@ version = "0.1.0"
 
 [deps]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
-Distributions = "0.25.120"
-HypothesisTests = "0.11.5"
-LinearAlgebra = "1.11.0"
-Random = "1.11.0"
+Distributions = "0.25"
+LinearAlgebra = "1"
+Random = "1"
+julia = "1.6"
 
 [extras]
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
