--- a/Project.toml
+++ b/Project.toml
@@ -13,10 +13,16 @@ Distributions = "0.25"
 LinearAlgebra = "1"
 Random = "1"
 julia = "1.6"
+Test = "1"
+Aqua = "0.8"
+HypothesisTests = "0.11"
+JET = "0.9"
 
 [extras]
-HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 
 [targets]
-test = ["Test", "HypothesisTests"]
+test = ["Test", "HypothesisTests", "Aqua", "JET"]
