--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ julia = "1.6"
 Test = "1"
 Aqua = "0.8"
 HypothesisTests = "0.11"
-JET = "0.9"
+JET = "0.4, 0.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
